adding csv file reader

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-    <title>Uploading & Reading CSV file</title> 
+    <title>Uploading & Reading CSV file</title>
 </head> 
 <body> 
+    <b> MRI Tumor Detector </b>
+    <p> try uploading a csv file </p>
     <form method = "POST" enctype="multipart/form-data" action = "/">   
         <input type="file" name="file" accept=".csv">
         <input type = "submit" value="Upload"> 
